<resources>
    <!-- 缩写 tfe-pe: tensorflow lite pose estimation-->
    <string name="description_for_the_button">START</string>
    <string name="battle_mode_description">Battle Mode</string>
    <string name="game_mode_description">遊戲模式</string>
    <string name="normal_mode_description">Normal Mode</string>
    <string name="menu_button_description">學員資料</string>
    <string name="teach_description">teach</string>

    <string name="tfe_pe_app_name">AICPR \n心肺拯救之旅</string>
    <string name="tfe_pe_request_permission">This app needs camera permission.</string>
    <string name="tfe_pe_tv_cycle">按壓循環: %s</string>
    <string name="tfe_pe_tv_deep">按壓深度: %s</string>
    <string name="tfe_pe_tv_frequency">按壓頻率: %s</string>
    <string name="tfe_pe_tv_model">模型: </string>
    <string name="tfe_pe_tv_fps">Fps: %d</string>
    <string name="tfe_pe_tv_angle">按壓姿勢: %s</string>
    <string name="tfe_pe_tv_device">裝置: </string>
    <string name="tfe_pe_tv_camera">相機: </string>

    <string name="date_label">Date: %s</string>
    <string name="time_label">Time: %s</string>

    <string name="pass">恭喜獲勝</string>
    <string name="btn_history">History</string>
    <string name="btn_login">Login</string>
    <string name="btn_signup">Sign Up</string>
    <string name="btn_report">評估報告</string>
    <string name="btn_restart">New Game</string>
    <string name="btn_home">Back To Home</string>
    <string name="btn_result">Go To Result</string>
    <string name="btn_help">Ask for help</string>
    <string name="store">store</string>

    <string name="default_web_client_id">718819344543-en32s1msev786pisou2ho9rgs6ue2lbr.apps.googleusercontent.com</string>

    <string-array name="tfe_pe_device_name">
        <item>NNAPI</item>
        <item>GPU</item>
        <item>CPU</item>
    </string-array>

    <string-array name="tfe_pe_camera_name">
        <item>Back</item>
        <item>Front</item>
    </string-array>

    <string-array name="tfe_pe_model_name">
        <item>Movenet Thunder</item>
        <item>Movenet Lightning</item>
    </string-array>

    <!-- 你添加的字符串资源 -->
    <string name="ai_avatar_desc">AI头像</string>

    <!-- 這裡加入新的文字資源 -->
    <string name="loading_text">Loading...</string>
    <string name="btn_next">Next</string>

    <!--請將你的 Dify 金鑰放在這裡 -->
    <string name="dify_api_key">app-gkGf2mh3ixLg8KzPAfz99TmE</string>  <!--請將你的 Dify 金鑰放在這裡 -->
    <!-- 將你的 API 金鑰放在這裡 -->
    <!--    <string name="openai_api_key">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</string> &lt;!&ndash; 請將你的 API 金鑰放在這裡 &ndash;&gt;-->
</resources>

