<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    tools:context=".SelectActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="260dp"
        android:layout_height="137dp"
        android:layout_marginTop="110dp"
        android:src="@drawable/ic_cprtour"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/normal_mode"
        android:layout_width="250dp"
        android:layout_height="65dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/ripple_effect"
        android:contentDescription="@string/normal_mode_description"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_normal_mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageButton
        android:id="@+id/teach"
        android:layout_width="250dp"
        android:layout_height="65dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ripple_effect"
        android:contentDescription="@string/teach_description"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_teach"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/battle_mode" />

    <ImageButton
        android:id="@+id/history"
        android:layout_width="250dp"
        android:layout_height="65dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ripple_effect"
        android:contentDescription="@string/btn_history"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teach" />

    <ImageButton
        android:id="@+id/battle_mode"
        android:layout_width="250dp"
        android:layout_height="65dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ripple_effect"
        android:contentDescription="@string/battle_mode_description"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_battle_mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/normal_mode" />

    <ImageButton
        android:id="@+id/login"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:background="@null"
        android:contentDescription="@string/btn_login"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_left_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.079" />

    <ImageButton
        android:id="@+id/profile"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@null"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_profile"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.068" />

    <ImageButton
        android:id="@+id/achievement"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@null"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_achievement"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.914"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.068" />
</androidx.constraintlayout.widget.ConstraintLayout>
