<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    tools:context=".HistoryActivity">

  <!-- 返回主頁的按鈕 -->
  <ImageButton
      android:id="@+id/btn_back"
      android:layout_width="65dp"
      android:layout_height="65dp"
      android:background="@null"
      android:scaleType="fitCenter"
      android:src="@drawable/ic_back"
      android:contentDescription="@string/btn_home"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.102"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.060"  />

  <!-- 切換顯示一般模式和對戰模式的按鈕 -->

  <ImageView
      android:id="@+id/imageView"
      android:layout_width="260dp"
      android:layout_height="137dp"
      android:layout_marginTop="84dp"
      android:src="@drawable/ic_historyback"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.496"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <!-- 模式切換按鈕 -->
  <LinearLayout
      android:id="@+id/modeButtons"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:orientation="horizontal"
      android:layout_marginTop="8dp"
      app:layout_constraintTop_toBottomOf="@+id/imageView"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent">

    <ImageButton
        android:id="@+id/normal_mode"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_weight="1"
        android:layout_marginEnd="16dp"
        android:background="@null"
        android:contentDescription="@string/normal_mode_description"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_normal_mode"
        android:alpha="0.5"/>

    <ImageButton
        android:id="@+id/battle_mode"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_weight="1"
        android:background="@null"
        android:contentDescription="@string/battle_mode_description"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_battle_mode"
        android:alpha="1"/>
  </LinearLayout>

  <!-- 歷史紀錄清單 -->
  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/historyRecyclerView"
      android:layout_width="409dp"
      android:layout_height="314dp"
      android:layout_marginTop="10dp"
      android:layout_marginBottom="16dp"
      android:padding="3dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/modeButtons"
      app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
