<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C0B6AE"
    tools:context=".MainResultActivity">

    <!-- 表格佈局 -->
    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="15dp"
        android:background="#EAE5E1"
        android:stretchColumns="1,2,3,4"
        app:layout_constraintBottom_toTopOf="@id/buttonLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- 表頭行 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@drawable/border">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:gravity="center"
                android:padding="3dp"
                android:src="@drawable/ic_cpr" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:padding="3dp"
                android:text="深度"
                android:textSize="20sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:padding="3dp"
                android:text="頻率"
                android:textSize="20sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:padding="3dp"
                android:text="角度"
                android:textSize="20sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:padding="3dp"
                android:text="循環"
                android:textSize="20sp" />
        </TableRow>

        <!-- 第一行數據 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@drawable/border">

            <TextView
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:padding="3dp"
                android:text="第一次"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvFirstDepth"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:gravity="center"
                android:padding="3dp"
                android:text=""
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvFirstFrequency"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:gravity="center"
                android:padding="3dp"
                android:text=""
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvFirstLeft"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:gravity="center"
                android:padding="3dp"
                android:text=""
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvFirstRight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:gravity="center"
                android:padding="3dp"
                android:text=""
                android:textSize="20sp" />
        </TableRow>

        <!-- 第二行數據 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@drawable/border">

            <TextView
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:padding="3dp"
                android:text="第二次"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvSecondDepth"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:gravity="center"
                android:padding="3dp"
                android:text=""
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvSecondFrequency"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:gravity="center"
                android:padding="3dp"
                android:text=""
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvSecondLeft"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:gravity="center"
                android:padding="3dp"
                android:text=""
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvSecondRight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:gravity="center"
                android:padding="3dp"
                android:text=""
                android:textSize="20sp" />
        </TableRow>

        <!-- 第三行數據 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@drawable/border">

            <TextView
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:padding="3dp"
                android:text="第三次"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvThirdDepth"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:gravity="center"
                android:padding="3dp"
                android:text=""
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvThirdFrequency"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:gravity="center"
                android:padding="3dp"
                android:text=""
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvThirdLeft"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:gravity="center"
                android:padding="3dp"
                android:text=""
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvThirdRight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:gravity="center"
                android:padding="3dp"
                android:text=""
                android:textSize="20sp" />
        </TableRow>

        <!-- 第四行數據 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@drawable/border">

            <TextView
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:padding="3dp"
                android:text="第四次"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvFourthDepth"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:gravity="center"
                android:padding="3dp"
                android:text=""
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvFourthFrequency"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:gravity="center"
                android:padding="3dp"
                android:text=""
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvFourthLeft"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:gravity="center"
                android:padding="3dp"
                android:text=""
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvFourthRight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:gravity="center"
                android:padding="3dp"
                android:text=""
                android:textSize="20sp" />
        </TableRow>

        <!-- 第五行數據 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@drawable/border">

            <TextView
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:padding="3dp"
                android:text="第五次"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvFifthDepth"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:gravity="center"
                android:padding="3dp"
                android:text=""
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvFifthFrequency"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:gravity="center"
                android:padding="3dp"
                android:text=""
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvFifthLeft"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:gravity="center"
                android:padding="3dp"
                android:text=""
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvFifthRight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:gravity="center"
                android:padding="3dp"
                android:text=""
                android:textSize="20sp" />
        </TableRow>

        <!-- 是否合格行 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@drawable/border">

            <TextView
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:padding="3dp"
                android:text="是否合格"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvIsPassDepth"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:gravity="center"
                android:padding="3dp"
                android:text=""
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvIsPassFrequency"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:gravity="center"
                android:padding="3dp"
                android:text=""
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvIsPassLeft"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:gravity="center"
                android:padding="3dp"
                android:text=""
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvIsPassRight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:gravity="center"
                android:padding="3dp"
                android:text=""
                android:textSize="20sp" />
        </TableRow>
    </TableLayout>

    <!-- 按钮区域 -->
    <GridLayout
        android:id="@+id/buttonLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:columnCount="2"
        android:gravity="center"
        android:rowCount="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tableLayout">

        <ImageButton
            android:id="@+id/btnReport"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            android:background="@drawable/ripple_effect"
            android:contentDescription="@string/btn_report"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_report" />

        <ImageButton
            android:id="@+id/btnRestart"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            android:background="@drawable/ripple_effect"
            android:contentDescription="@string/btn_restart"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_newgame" />

        <ImageButton
            android:id="@+id/btnHistory"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            android:background="@drawable/ripple_effect"
            android:contentDescription="@string/btn_history"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_history" />

        <ImageButton
            android:id="@+id/btnHome"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            android:background="@drawable/ripple_effect"
            android:contentDescription="@string/btn_home"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_home" />
    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
